2016 0823 vs2013 add find contours and draw contous function.Test pass

--- a/intersection.vcxproj.filters
+++ b/intersection.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="video.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="car.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="video.h">
